Fix unexpected overflow

--- a/SCSS/Modern Kanban.scss
+++ b/SCSS/Modern Kanban.scss
@@ -45,11 +45,6 @@
                     min-width: 390px;
                     padding-bottom: 5px;
 
-                    &:last-of-type {
-                        margin-right: 0;
-                    }
-                    
-
                     &:not(:first-child) {
                         margin-left: 0;
                     }
